--- a/CardDigitalAPI/appsettings.json
+++ b/CardDigitalAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;DataBase=WalletDigital;Uid=root;Pwd=******"
+    "DefaultConnection": "Server=localhost;DataBase=WalletDigital;Uid=root;Pwd=*******"
   },
   "Logging": {
     "LogLevel": {
